tests/ui/method_self.stderr
error: Didn't expect self parameter
 --> $DIR/method_self.rs:8:13
  |
8 | fn read_all(self)
  |             ^^^^

error: `self` parameter is only allowed in associated functions
 --> $DIR/method_self.rs:8:13
  |
8 | fn read_all(self)
  |             ^^^^ not semantically valid as function parameter
  |
  = note: associated functions are those in `impl` or `trait` definitions
